css/obBase.css
/* ... */
@-webkit-keyframes spinnerAnimation {
  0% {
    transform: translate(50%,-50%) rotate(359deg);
  }
  100% {
    transform: translate(50%,-50%) rotate(0deg);
  }
}
@keyframes spinnerAnimation {
  0% {
    transform: translate(50%,-50%) rotate(359deg);
  }
  100% {
    transform: translate(50%,-50%) rotate(0deg);
  }
}

/*========== one-off classes ==========*/

.modal .homeModal-heroText {
  position: absolute;
  bottom: 0px;
  top: 180px;
  color: #fff;
  font-size: 20px;
  line-height: 22px;
  width: 70%;
  margin: 0 15%;
  text-align: center;
}

.modal .homeModal-accordion,
.modal .aboutModal-accordion {
  height: 374px;
}

.modal .homeModal-accordion .btn-bar{
  border-radius: 0;
  font-size: 14px;
  height: 50px;
  line-height: 50px;
  margin: 0;
  opacity: 1;
}

.modal .aboutModal-accordion .btn-bar{
  font-size: 14px;
  height: 50px;
  line-height: 50px;
  opacity: 1;
}

.modal .homeModal-accordion .btn-bar .btn,
.modal .aboutModal-accordion .btn-bar .btn{
  opacity: .75;
}

.modal .homeModal-accordion .btn-bar:hover,
.modal .aboutModal-accordion .btn-bar:hover{
  opacity: .75;
}

.modal .homeModal-accordion .btn,
.modal .aboutModal-accordion .btn {
  background-color: rgb(50,126,184);
}

.modal .homeModal-accordion .btn-bar,
.modal .aboutModal-accordion .btn-bar{
  border-right: none;
}

.modal .aboutModal-accordion .btn-bar.active{
  background: #106DA3;
}

.modal .aboutModal-accordion .btn-bar.active:hover{
  opacity: 1;
}

.modal .homeModal-accordion .btn-bar:nth-child(2){
]  border-left: solid 1px #086A9E;
}

.modal .homeModal-accordion .searchWrapper,
.modal .aboutModal-accordion .searchWrapper {
  background: #086A9E;
  border-bottom: solid 1px #327EB8;
}

.modal .homeModal-accordion .flexRow,
.modal .aboutModal-accordion .flexRow {
  width: 100%;
}

.modal .homeModal-accordion .accordion-child,
.modal .aboutModal-accordion .accordion-child {
  width: 525px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.modal .homeModal-settings,
.modal .homeModal-settings.flexRow {
  height: 222px;
  overflow-y: auto;
  background-color: #086A9E;
}

.modal .homeModal-settings.homeModal-settings-noSearch {
  height: 274px;
}

.modal .homeModal-avatarPreview {
  background: url('../imgs/defaultUser.png') 100% 100%;
  background-size: cover;
  margin-top: 30px;
}

.modal .aboutModal-accordion .modal-section {
  display: block;
  height: 315px;
  font-weight: 400;
  padding: 10px 20px;
  overflow: scroll;
  font-size: 14px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.uploadPhotoControls {
  position: absolute;
  top: 146px;
  left: 134px;
  z-index: 1;
}

.uploadPhotoControls .btn {
  float: none;
}

.default-avatar {
  border-radius: 3px;
  color: #086a9e;
  font-size: 73px;
  height: 76px;
  text-align: center;
  width: 80px;
}

.fancy-heading {
  font-weight: 200;
  font-size: 34px;
  opacity: .8;
  letter-spacing: 1.5px;
  margin-bottom: 0;
  margin-left: 0;
}

.page-contractTitle {
  font-size: 26px;
  font-weight: 500;
  letter-spacing: .8px;
  margin-bottom: 0;
  margin-top: 10px;
  opacity: 1;
}

#customizeControls {
  position: fixed;
  left: 30px;
  top: 80px;
  width: 40px;
  z-index: 100;
}

#customizeControls .js-customizePrimaryColor .btn-square {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

#customizeControls .js-customizeTextColor .btn-square {
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

#customizeControls .btn-square {
  box-shadow: 0px 1px 2px #898989;
  margin-bottom: 0;
  width: 40px;
  height: 40px;
  border: solid 2px #fff;
  border-radius: 0;
  border-bottom: 0;
}

.customizePrimaryColorRecommendations,
.customizeSecondaryColorRecommendations,
.customizeBackgroundColorRecommendations,
.customizeTextColorRecommendations {
  position: absolute;
  left: 36px;
  background: #252525;
  width: 0;
  top: 0;
  height: 38px;
  line-height: 38px;
  padding: 2px;
  border-radius: 0;
  overflow: hidden;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  transition: width .35s cubic-bezier(0, 0, 0.2, 1);
}

.customColorChoice {
  background: #fff;
  display: inline-block;
  width: 32px;
  height: 32px;
  margin-right: 2px;
  margin-top: 3px;
  margin-bottom: 5px;
  cursor: pointer;
  z-index: 5;
  border-radius: 1px;
  transition: background .5s cubic-bezier(0, 0, 0.2, 1);
}

.customColorChoice:hover {
  outline: 2px solid #ccc;
}

.customColorChoiceControl {
  width: 32px;
  opacity: .5;
  text-align: center;
  transition: opacity .25s cubic-bezier(0, 0, 0.2, 1);

}


.customColorChoice:hover:hover {
  outline: 2px solid #ccc;
  opacity: 1;
}

.customColorPicker {
  top: 10px;
  margin-left: -8px;
  font-size: 18px;
  position: absolute;
}

.discoverToggleHelper {
  top: -40px;
  width: auto;
  max-width: 300px;
  background: rgba(37,37,37,.95);
  border-radius: 3px;
  color: #fff;
  padding: 8px 10px;
  position: absolute;
  z-index: 10;
  height: 16px;
  font-size: 11px;
  right: 0;
  line-height: 16px;
  opacity: 1;
  white-space: nowrap;
  pointer-events: none;
  margin-top: 2px;
}

.discoverToggleHelper:after {
  content: " ";
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px 10px 0 10px;
  border-color: rgba(37,37,37,.95) transparent transparent transparent;
  position: absolute; 
  bottom: -10px;
  right: 48px;
}

.tooltip {
  position: relative;
}

.tooltip:hover:after{
  max-width: 400px;
  background: rgba(37,37,37,.95);
  border-radius: 3px;
  bottom: -32px;
  color: #fff;
  content: attr(data-tooltip);
  padding: 8px 10px;
  position: absolute;
  z-index: 10;
  height: 16px;
  font-size: 11px;
  left: 0;
  line-height: 16px;
  opacity: 1;
  white-space: nowrap;
  pointer-events: none;
  margin-top: 2px;
}

.tooltip.tooltip-left:hover:after{
  left: auto;
  right: 0;
}

.tooltip.tooltip-leftTop:hover:after{
  left: auto;
  right: 0;
  bottom: 18px;
}
/* ... */

